--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<form action="http://localhost:5000/" method="post">
+		<form action="" method="post">
 			<input type="text" placeholder="search" name="search">
 			<button type='submit'>Search</button>
 		</form>
